--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>Hi welcome to yelp demo!</h1>
-<h2>This is one of the sample applications for <a href="http://www.baserails.com/">baserails</a>, a platform that teaches people to build awesome custom web sties with the rub on rails programming language</h2>
+<h2>This is one of the sample applications for <a href="http://www.baserails.com/">baserails</a>, a platform that teaches people to build awesome custom web sites with the ruby on rails programming language. Sign up and start learning today!</h2>
