--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -28,9 +28,9 @@
     		<h3>No reviews yet. Be the first to write one!</h3>
 		<% else %>
 			<% @reviews.each do |review| %>
-    		<p><%= review.rating %></p>
+    		<div class="star-rating" data-score= <%= review.rating %> ></div>
     		<p><%= review.comment %></p>
-    		<% end %>
+    	<% end %>
 <% end %>
 
     </div>
@@ -41,3 +41,13 @@
 <%= link_to "Write Review", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
 <%= link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-link" %> |
 <%= link_to 'Back', restaurants_path, class: "btn btn-link" %>
+
+<script>
+    $('.star-rating').raty({
+      path: 'https://s3.amazonaws.com/yelpdemo77/Stars',
+      readOnly: true,
+      score: function() {
+    	return $(this).attr('data-score');
+    }
+  });
+</script>
