--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -23,8 +23,19 @@
 	<strong>Website:</strong>
 	<%= link_to @restaurant.website, @restaurant.website %>
 </p>
-		</div>
+
+<%= link_to "Write Review", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
+<br>
+<br>
+<iframe
+  width="230"
+  height="230"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/search?key=AIzaSyBaqfdUI9EPVBDsw7G4Dtm_yWvVOUVoUbk&q=<%= @restaurant.address.parameterize %>&zoom=14">
+</iframe>
+</div>
 	 
+
 
 	<div class="col-md-9">
 		<% if @reviews.blank? %>
@@ -32,17 +43,17 @@
 		<% else %>
 			<table class="table">
 		<thead>
-    		<tr>
-        		<th class="col-md-3"></th>
-        		<th class="col-md-9"></th>
-    		</tr>
+			<tr>
+				<th class="col-md-3"></th>
+				<th class="col-md-9"></th>
+			</tr>
 		</thead>
 		<tbody>
 				<% @reviews.each do |review| %>
 					<tr>							
 						<td>
 							<h4>
-    						<%= "#{review.user.first_name.capitalize} #{review.user.last_name.capitalize[0]}." %>
+							<%= "#{review.user.first_name.capitalize} #{review.user.last_name.capitalize[0]}." %>
 							</h4>
 							<p><%= review.created_at.strftime("%-m/%-d/%-y") %></p>
 						</td>
@@ -50,6 +61,14 @@
 						<td>
 							<div class="star-rating" data-score= <%= review.rating %> ></div>
 							<p><%= h(review.comment).gsub(/\n/, '<br/>').html_safe %></p>
+
+							<% if user_signed_in? %>
+					    	<% if (review.user == current_user) || (current_user.admin?) %>
+        					<%= link_to "Edit", edit_restaurant_review_path(@restaurant, review) %>
+        					<%= link_to "Delete", restaurant_review_path(@restaurant, review), method: :delete %>
+    						<% end %>
+							<% end %>
+
 						</td>
 					</tr>
 				<% end %>
@@ -63,7 +82,6 @@
 
 
 
-<%= link_to "Write Review", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
 <%= link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-link" %> |
 <%= link_to 'Back', restaurants_path, class: "btn btn-link" %>
 
